fixes banner size

--- a/css/main.scss
+++ b/css/main.scss
@@ -391,8 +391,10 @@ header {
     .banner-highest-rating {
       font-size: 1.075rem;
       color: #000;
+      span {
       background-color: whitesmoke;
       padding: 0 .3rem .1rem .3rem;
+      }
     }
     .main-title {
       padding-bottom: .5rem;
