--- a/index.haml
+++ b/index.haml
@@ -50,8 +50,8 @@
         %h1.logo
           %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
           .logo-title
-            %p.banner
-              %span.banner-highest-rating Planet FM's #2 highest rating show
+            %p.banner-highest-rating 
+              %span Planet FM's #2 highest rating show
             %p.main-title
               %span.thin>KICK
               %span.bold ARTS
