--- a/css/main.css
+++ b/css/main.css
@@ -622,9 +622,10 @@ header {
       line-height: normal; }
     .logo .logo-title .banner-highest-rating {
       font-size: 1.075rem;
-      color: #000;
-      background-color: whitesmoke;
-      padding: 0 .3rem .1rem .3rem; }
+      color: #000; }
+      .logo .logo-title .banner-highest-rating span {
+        background-color: whitesmoke;
+        padding: 0 .3rem .1rem .3rem; }
     .logo .logo-title .main-title {
       padding-bottom: .5rem; }
   .logo img {
@@ -1396,11 +1397,11 @@ footer p {
   .details {
     font-size: .7rem !important; }
 
-  .banner {
-    margin-bottom: .5rem; }
-
   .banner-highest-rating {
-    padding: 0 .3rem .1rem .3rem; }
+    padding-bottom: .5rem;
+    font-size: 1.01rem !important; }
+    .banner-highest-rating span {
+      padding: 0 .3rem .1rem .3rem; }
 
   /*     NAV */
   .top-bar {
